--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -38,7 +38,6 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-tailwind": "~3.0.0"
+    "typescript": "~4.5.5"
   }
 }
